--- a/Main/kioscocetec/app/components/Header.css
+++ b/Main/kioscocetec/app/components/Header.css
@@ -1,22 +1,41 @@
 .titulo {
-    border: 2px;
+  border: 2px;
 }
 .header {
-    background-color: black;
-    padding: 2px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  background-color: black;
+  padding: 2px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: black;
-    border: 1px solid #ddd;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+  background-color: black;
+  border: 1px solid #ddd;
 }
 
 /* class="group inline-flex h-9 w-max items-center justify-center rounded-md bg-background px-4 py-2 text-sm font-medium transition-colors hover:bg-accent hover:text-accent-foreground focus:bg-accent focus:text-accent-foreground focus:outline-none disabled:pointer-events-none disabled:opacity-50 data-[active]:bg-accent/50 data-[state=open]:bg-accent/50"*/
 /* class="h-9 w-full border-input px-3 text-base shadow-sm file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 min-w-14 md:max-w-72 appearance-none rounded-md border bg-white py-2 pl-4 pr-10 md:pl-2 md:pr-8 lg:pl-4 lg:pr-10 transition-opacity inline-block" */
 /* enterkeyhint="search"*/
 /* class="lucide lucide-search -ml-7 block h-5 w-5"*/
+
+/* Agrega esto a tu archivo CSS */
+
+/* Agrega esto a tu archivo CSS */
+.cart-animation {
+  animation: scale 0.3s ease-in-out;
+}
+
+@keyframes scale {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2); /* Aumenta el tamaño a 1.2 veces */
+  }
+  100% {
+    transform: scale(1); /* Vuelve al tamaño original */
+  }
+}
